--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,7 @@
   <!-- CSS Files -->
   <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
   <link href="./assets/css/paper-kit.css?v=2.2.2" rel="stylesheet" />
-  <!-- CSS Just for demo purpose, don't include it in your project -->
+  <!-- CSS Just for demo23dse purpose, don't include it in your project -->
   <link href="./assets/demo/demo.css" rel="stylesheet" />
 
   <!-- Custom css style -->
@@ -134,22 +134,163 @@
             To-do List
           </h2>
         </div>
+
         <div class="row">
           <div class="col-2 text-right">
-            <h1 class="display-4"><span class="badge badge-secondary">23</span></h1>
-            <h2>OCT</h2>
+            <h1 class="display-4"><span class="badge badge-secondary">04</span></h1>
+            <h2>March</h2>
           </div>
           <div class="col-10">
-            <h3 class="text-uppercase"> Ice Cream Social </h3>
+            <h3 class="text-uppercase"> Lecture Review </h3>
             <ul class="list-inline">
-                <li class="list-inline-item"><i class="fa fa-calendar-o" aria-hidden="true"></i> Monday</li>
-              <li class="list-inline-item"><i class="fa fa-clock-o" aria-hidden="true"></i> 12:30 PM - 2:00 PM</li>
-              <li class="list-inline-item"><i class="fa fa-location-arrow" aria-hidden="true"></i> Cafe</li>
+                <li class="list-inline-item"><i class="fa fa-calendar-o" aria-hidden="true"></i> Monday </li>
+              <li class="list-inline-item"><i class="fa fa-clock-o" aria-hidden="true"></i> 11:59 PM </li>
             </ul>
-            <p>Lorem ipsum dolsit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>
+              <ul>
+                <li style="list-style-type: none;">
+                  <i class="fa fa-check"></i> COMS4733 lec10
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="fa fa-circle"></i> COMS4733 lec11
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="fa fa-circle"></i> COMS4231 data-segmentation
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="fa fa-circle"></i> COMS4231 sequence-alignment
+                </li>
+              </ul>
+            </p>
           </div>
         </div>
-        <div class="row row-striped">
+        <hr />
+
+
+        <div class="row">
+          <div class="col-2 text-right">
+            <h1 class="display-4"><span class="badge badge-secondary">05</span></h1>
+            <h2>March</h2>
+          </div>
+          <div class="col-10">
+            <h3 class="text-uppercase"> Voice Editor Project </h3>
+            <ul class="list-inline">
+                <li class="list-inline-item"><i class="fa fa-calendar-o" aria-hidden="true"></i> Tuesday </li>
+              <li class="list-inline-item"><i class="fa fa-clock-o" aria-hidden="true"></i> 11:59 PM </li>
+            </ul>
+            <p>
+              <ul>
+                <li style="list-style-type: none;">
+                  <i class="fa fa-circle"></i> Complete Edit-mode & locate node by keyword & highlight selected node;
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="fa fa-circle"></i> write integration tests (some);
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="fa fa-circle"></i> Write & send daily report.
+                </li>
+              </ul>
+            </p>
+          </div>
+        </div>
+        <hr />
+
+        <div class="row">
+          <div class="col-2 text-right">
+            <h1 class="display-4"><span class="badge badge-secondary">11</span></h1>
+            <h2>March</h2>
+          </div>
+          <div class="col-10">
+            <h3 class="text-uppercase"> COMS4733 Robotics Assignment03 </h3>
+            <ul class="list-inline">
+                <li class="list-inline-item"><i class="fa fa-calendar-o" aria-hidden="true"></i> Monday </li>
+              <li class="list-inline-item"><i class="fa fa-clock-o" aria-hidden="true"></i> 11:59 PM </li>
+            </ul>
+            <p>
+              <ul>
+                <li style="list-style-type: none;"> <i class="fa fa-circle"></i> Problem 01 </li>
+                <li style="list-style-type: none;"> <i class="fa fa-circle"></i> Problem 02 </li>
+                <li style="list-style-type: none;"> <i class="fa fa-circle"></i> Problem 03 </li>
+              </ul>
+            </p>
+          </div>
+        </div>
+        <hr />
+
+        <div class="row">
+          <div class="col-2 text-right">
+            <h1 class="display-4"><span class="badge badge-secondary">11</span></h1>
+            <h2>March</h2>
+          </div>
+          <div class="col-10">
+            <h3 class="text-uppercase"> COMS4231 Algorithm Assignment03 </h3>
+            <ul class="list-inline">
+                <li class="list-inline-item"><i class="fa fa-calendar-o" aria-hidden="true"></i> Monday </li>
+              <li class="list-inline-item"><i class="fa fa-clock-o" aria-hidden="true"></i> 08:00 PM </li>
+            </ul>
+            <p>
+              <ul>
+                <li style="list-style-type: none;"> <i class="fa fa-circle"></i> Problem 01 </li>
+                <li style="list-style-type: none;"> <i class="fa fa-circle"></i> Problem 02 </li>
+                <li style="list-style-type: none;"> <i class="fa fa-circle"></i> Problem 03 </li>
+                <li style="list-style-type: none;"> <i class="fa fa-circle"></i> Problem 04 </li>
+                <li style="list-style-type: none;"> <i class="fa fa-circle"></i> Problem 05 </li>
+              </ul>
+            </p>
+          </div>
+        </div>
+        <hr />
+
+        <div class="row">
+          <div class="col-2 text-right">
+            <h1 class="display-4"><span class="badge badge-secondary">12</span></h1>
+            <h2>March</h2>
+          </div>
+          <div class="col-10">
+            <h3 class="text-uppercase"> COMS4172 3D-UI </h3>
+            <ul class="list-inline">
+                <li class="list-inline-item"><i class="fa fa-calendar-o" aria-hidden="true"></i> Tuesday </li>
+              <li class="list-inline-item"><i class="fa fa-clock-o" aria-hidden="true"></i> 01:10 PM </li>
+            </ul>
+          </div>
+        </div>
+        <hr />
+
+        <div class="row">
+          <div class="col-2 text-right">
+            <h1 class="display-4"><span class="badge badge-secondary">13</span></h1>
+            <h2>March</h2>
+          </div>
+          <div class="col-10">
+            <h3 class="text-uppercase"> COMS4733 Robotics Midterm </h3>
+            <ul class="list-inline">
+                <li class="list-inline-item"><i class="fa fa-calendar-o" aria-hidden="true"></i> Wednesday </li>
+              <li class="list-inline-item"><i class="fa fa-clock-o" aria-hidden="true"></i> 04:10 - 05:25 PM </li>
+              <li class="list-inline-item"><i class="fa fa-location-arrow" aria-hidden="true"></i> 633 MUDD </li>
+            </ul>
+          </div>
+        </div>
+        <hr />
+
+        <div class="row">
+          <div class="col-2 text-right">
+            <h1 class="display-4"><span class="badge badge-secondary">14</span></h1>
+            <h2>March</h2>
+          </div>
+          <div class="col-10">
+            <h3 class="text-uppercase"> COMS4231 Algorithms Midterm </h3>
+            <ul class="list-inline">
+                <li class="list-inline-item"><i class="fa fa-calendar-o" aria-hidden="true"></i> Thursday </li>
+              <li class="list-inline-item"><i class="fa fa-clock-o" aria-hidden="true"></i> 01:10 - 02:25 PM </li>
+              <li class="list-inline-item"><i class="fa fa-location-arrow" aria-hidden="true"></i> 451 CSB </li>
+            </ul>
+          </div>
+        </div>
+        <hr />
+
+
+        <!-- 
+        <div class="row">
           <div class="col-2 text-right">
             <h1 class="display-4"><span class="badge badge-secondary">27</span></h1>
             <h2>OCT</h2>
@@ -164,6 +305,7 @@
             <p>Lorem ipsum dolsit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
         </div>
+        -->
         <br />
         <br />
         <br />
