--- a/aboutme.html
+++ b/aboutme.html
@@ -152,7 +152,7 @@
                   <i class="fa fa-check"></i> COMS4733 lec10
                 </li>
                 <li style="list-style-type: none;">
-                  <i class="fa fa-circle"></i> COMS4733 lec11
+                  <i class="fa fa-check"></i> COMS4733 lec11
                 </li>
                 <li style="list-style-type: none;">
                   <i class="fa fa-circle"></i> COMS4231 data-segmentation
