--- a/aboutme.html
+++ b/aboutme.html
@@ -155,10 +155,10 @@
                   <i class="fa fa-check"></i> COMS4733 lec11
                 </li>
                 <li style="list-style-type: none;">
-                  <i class="fa fa-circle"></i> COMS4231 data-segmentation
+                  <i class="fa fa-check"></i> COMS4231 data-segmentation
                 </li>
                 <li style="list-style-type: none;">
-                  <i class="fa fa-circle"></i> COMS4231 sequence-alignment
+                  <i class="fa fa-check"></i> COMS4231 sequence-alignment
                 </li>
               </ul>
             </p>
@@ -166,6 +166,49 @@
         </div>
         <hr />
 
+        <div class="row">
+          <div class="col-2 text-right">
+            <h1 class="display-4"><span class="badge badge-secondary">05</span></h1>
+            <h2>March</h2>
+          </div>
+          <div class="col-10">
+            <h3 class="text-uppercase"> Lecture Review </h3>
+            <ul class="list-inline">
+                <li class="list-inline-item"><i class="fa fa-calendar-o" aria-hidden="true"></i> Monday </li>
+              <li class="list-inline-item"><i class="fa fa-clock-o" aria-hidden="true"></i> 11:59 PM </li>
+            </ul>
+            <p>
+              <ul>
+                <li style="list-style-type: none;">
+                  <i class="fa fa-circle"></i> COMS4733 lecture review
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="fa fa-check"></i> COMS4231 Matrix Chain
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="fa fa-circle"></i> COMS4231 Graph & BFS1
+                </li>
+              </ul>
+            </p>
+          </div>
+        </div>
+        <hr />
+
+        <div class="row">
+          <div class="col-2 text-right">
+            <h1 class="display-4"><span class="badge badge-secondary">05</span></h1>
+            <h2>March</h2>
+          </div>
+          <div class="col-10">
+            <h3 class="text-uppercase"> New York City Women in Tech </h3>
+            <ul class="list-inline">
+                <li class="list-inline-item"><i class="fa fa-calendar-o" aria-hidden="true"></i> Tuesday </li>
+              <li class="list-inline-item"><i class="fa fa-clock-o" aria-hidden="true"></i> 05:45 PM </li>
+              <li class="list-inline-item"><i class="fa fa-location-arrow" aria-hidden="true"></i> The Forum </li>
+            </ul>
+          </div>
+        </div>
+        <hr />
 
         <div class="row">
           <div class="col-2 text-right">
@@ -230,9 +273,9 @@
             </ul>
             <p>
               <ul>
-                <li style="list-style-type: none;"> <i class="fa fa-circle"></i> Problem 01 </li>
-                <li style="list-style-type: none;"> <i class="fa fa-circle"></i> Problem 02 </li>
-                <li style="list-style-type: none;"> <i class="fa fa-circle"></i> Problem 03 </li>
+                <li style="list-style-type: none;"> <i class="fa fa-check"></i> Problem 01 </li>
+                <li style="list-style-type: none;"> <i class="fa fa-check"></i> Problem 02 </li>
+                <li style="list-style-type: none;"> <i class="fa fa-check"></i> Problem 03 </li>
                 <li style="list-style-type: none;"> <i class="fa fa-circle"></i> Problem 04 </li>
                 <li style="list-style-type: none;"> <i class="fa fa-circle"></i> Problem 05 </li>
               </ul>
