Create demo for escape-room group

--- a/aboutme.html
+++ b/aboutme.html
@@ -135,64 +135,6 @@
           </h2>
         </div>
 
-        <div class="row">
-          <div class="col-2 text-right">
-            <h1 class="display-4"><span class="badge badge-secondary">04</span></h1>
-            <h2>March</h2>
-          </div>
-          <div class="col-10">
-            <h3 class="text-uppercase"> Lecture Review </h3>
-            <ul class="list-inline">
-                <li class="list-inline-item"><i class="fa fa-calendar-o" aria-hidden="true"></i> Monday </li>
-              <li class="list-inline-item"><i class="fa fa-clock-o" aria-hidden="true"></i> 11:59 PM </li>
-            </ul>
-            <p>
-              <ul>
-                <li style="list-style-type: none;">
-                  <i class="fa fa-check"></i> COMS4733 lec10
-                </li>
-                <li style="list-style-type: none;">
-                  <i class="fa fa-check"></i> COMS4733 lec11
-                </li>
-                <li style="list-style-type: none;">
-                  <i class="fa fa-check"></i> COMS4231 data-segmentation
-                </li>
-                <li style="list-style-type: none;">
-                  <i class="fa fa-check"></i> COMS4231 sequence-alignment
-                </li>
-              </ul>
-            </p>
-          </div>
-        </div>
-        <hr />
-
-        <div class="row">
-          <div class="col-2 text-right">
-            <h1 class="display-4"><span class="badge badge-secondary">05</span></h1>
-            <h2>March</h2>
-          </div>
-          <div class="col-10">
-            <h3 class="text-uppercase"> Lecture Review </h3>
-            <ul class="list-inline">
-                <li class="list-inline-item"><i class="fa fa-calendar-o" aria-hidden="true"></i> Monday </li>
-              <li class="list-inline-item"><i class="fa fa-clock-o" aria-hidden="true"></i> 11:59 PM </li>
-            </ul>
-            <p>
-              <ul>
-                <li style="list-style-type: none;">
-                  <i class="fa fa-circle"></i> COMS4733 lecture review
-                </li>
-                <li style="list-style-type: none;">
-                  <i class="fa fa-check"></i> COMS4231 Matrix Chain
-                </li>
-                <li style="list-style-type: none;">
-                  <i class="fa fa-circle"></i> COMS4231 Graph & BFS1
-                </li>
-              </ul>
-            </p>
-          </div>
-        </div>
-        <hr />
 
         <div class="row">
           <div class="col-2 text-right">
@@ -202,7 +144,7 @@
           <div class="col-10">
             <h3 class="text-uppercase"> New York City Women in Tech </h3>
             <ul class="list-inline">
-                <li class="list-inline-item"><i class="fa fa-calendar-o" aria-hidden="true"></i> Tuesday </li>
+                <li class="list-inline-item"><i class="fa fa-calendar-o" aria-hidden="true"></i> Thursday </li>
               <li class="list-inline-item"><i class="fa fa-clock-o" aria-hidden="true"></i> 05:45 PM </li>
               <li class="list-inline-item"><i class="fa fa-location-arrow" aria-hidden="true"></i> The Forum </li>
             </ul>
@@ -212,7 +154,39 @@
 
         <div class="row">
           <div class="col-2 text-right">
-            <h1 class="display-4"><span class="badge badge-secondary">05</span></h1>
+            <h1 class="display-4"><span class="badge badge-secondary">07</span></h1>
+            <h2>March</h2>
+          </div>
+          <div class="col-10">
+            <h3 class="text-uppercase"> Daily Tasks </h3>
+            <ul class="list-inline">
+                <li class="list-inline-item"><i class="fa fa-calendar-o" aria-hidden="true"></i> Thursday </li>
+              <li class="list-inline-item"><i class="fa fa-clock-o" aria-hidden="true"></i> 11:59 PM </li>
+            </ul>
+            <p>
+              <ul>
+                <li style="list-style-type: none;">
+                  <i class="fa fa-check"></i> COMS4231 Graph & BFS1
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="fa fa-check"></i> Last 2 questions
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="fa fa-check"></i> COMS4231 DFS-toposort
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="fa fa-circle"></i> COMS4733 question 01
+                </li>
+              </ul>
+            </p>
+          </div>
+        </div>
+        <hr />
+
+
+        <div class="row">
+          <div class="col-2 text-right">
+            <h1 class="display-4"><span class="badge badge-secondary">07</span></h1>
             <h2>March</h2>
           </div>
           <div class="col-10">
@@ -224,7 +198,7 @@
             <p>
               <ul>
                 <li style="list-style-type: none;">
-                  <i class="fa fa-circle"></i> Complete Edit-mode & locate node by keyword & highlight selected node;
+                  <i class="fa fa-check"></i> Edit mode move & search
                 </li>
                 <li style="list-style-type: none;">
                   <i class="fa fa-circle"></i> write integration tests (some);
