--- a/project/demo.html
+++ b/project/demo.html
@@ -66,21 +66,21 @@
       <h2 class="text-center"> Group 03 Escape Room Demo </h2>
       
       <div class="custom-content">
-        <div class="col-lg-1 col-md-1">
+        <!-- <div class="col-lg-1 col-md-1"> -->
           <!-- <iframe width="200" height="250"
             src="https://www.youtube.com/embed/kLW2NaABL3w">
           </iframe>  -->
-        </div> 
+        <!-- </div>  -->
         <!-- <div class="offset-lg-1 offset-md-1 col-lg-8 col-md-8"> -->
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/kLW2NaABL3w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+          <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/kLW2NaABL3w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+ -->
         https://www.youtube.com/watch?v=kLW2NaABL3w
         https://www.youtube.com/watch?v=RZ4Cw6axsKk
 
         <!-- </div>   -->
 
               
-      </div>
+      <!-- </div> -->
 
     </div>
   </div>
