--- a/project/demo.html
+++ b/project/demo.html
@@ -74,8 +74,8 @@
         <!-- <div class="offset-lg-1 offset-md-1 col-lg-8 col-md-8"> -->
           <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/kLW2NaABL3w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  -->
-        https://www.youtube.com/watch?v=kLW2NaABL3w
-        https://www.youtube.com/watch?v=RZ4Cw6axsKk
+        <a href="https://www.youtube.com/watch?v=kLW2NaABL3w"> link </a>
+        <!-- https://www.youtube.com/watch?v=RZ4Cw6axsKk -->
 
         <!-- </div>   -->
 
